# pr-risk-scorer

./: .gitignore  404.html  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  action.yml  index.html  mkdocs.local.yml  mkdocs.yml  package-lock.json  package.json  pyproject.toml  sitemap.xml  tsconfig.json  tsconfig.test.json
.claude/commands/: score-pr-pypi.md  score-pr.md
.github/workflows/: docs.yml  publish.yml  release.yml  self_test.yml  test.yml
ai-suggestions/: index.html
configuration/: index.html
contributing/: index.html
docs/: ai-suggestions.md  configuration.md  contributing.md  getting-started.md  index.md  notifications.md  signals.md  using-as-skill.md
getting-started/: index.html
notifications/: index.html
search/: search_index.json
signals/: index.html
src/: comment.ts  config.ts  index.ts  main.py  reporter.py  scorer.py  scorer.ts
src/__tests__/: coverageRatio.test.ts  filesChanged.test.ts  migrationFiles.test.ts  scorer.test.ts
src/ai/: prompt.ts  suggest.ts
src/analyzers/: __init__.py  complexity.py  coverage.py  dead_code.py  diff_size.py  migration.py
src/notifications/: index.ts  jira.ts  linear.ts  slack.ts
src/signals/: apiBreaking.ts  bundleSizeDelta.ts  complexityDelta.ts  coverageRatio.ts  deadCode.ts  filesChanged.ts  migrationFiles.ts  secretLeak.ts  sonarQube.ts  types.ts
src/utils/: detectLanguage.ts
tests/: test_analyzers.py  test_scorer.py
tests/integration/: scorer-v2.test.ts
using-as-skill/: index.html
