[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pr-risk-scorer"
version = "0.1.0"
description = "GitHub Action that scores pull requests by structural risk"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "radon>=6.0.1",
    "vulture>=2.11",
    "coverage>=7.4",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.urls]
Repository = "https://github.com/FasterApiWeb/pr-risk-scorer"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.envs.default]
dependencies = [
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "radon>=6.0.1",
    "vulture>=2.11",
    "coverage>=7.4",
]

[tool.hatch.envs.default.scripts]
test = "pytest tests/ -v --cov=src --cov-report=xml --cov-report=term-missing"
typecheck = "mypy src/ tests/ --strict"
lint = "python -m vulture src/ --min-confidence 80"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
