[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pr-risk-scorer"
version = "0.2.0"
description = "GitHub Action that scores pull requests by structural risk"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "FasterApiWeb", email = "contact@fasterapiweb.com" },
]
keywords = ["github", "pull-request", "code-review", "risk", "ci", "static-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "radon>=6.0.1",
    "vulture>=2.11",
    "coverage>=7.4",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
pr-risk-scorer = "pr_risk_scorer.main:main"

[project.urls]
Homepage = "https://github.com/FasterApiWeb/pr-risk-scorer"
Repository = "https://github.com/FasterApiWeb/pr-risk-scorer"
Documentation = "https://fasterapiweb.github.io/pr-risk-scorer/"
"Bug Tracker" = "https://github.com/FasterApiWeb/pr-risk-scorer/issues"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.sources]
"src" = "pr_risk_scorer"

[tool.hatch.envs.default]
dependencies = [
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "radon>=6.0.1",
    "vulture>=2.11",
    "coverage>=7.4",
]

[tool.hatch.envs.default.scripts]
test = "pytest tests/ -v --cov=src --cov-report=xml --cov-report=term-missing"
typecheck = "mypy src/ tests/ --strict"
lint = "python -m vulture src/ --min-confidence 80"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
